# codingagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README_RUN.md  docker-compose.yml  pyproject.toml  requirements.txt  run_command.txt  setup.py
config/: README.md  config.yaml  students.yaml
configs/: Navigation_Assessment.docx.md  ROBOT MODELLING — Assessment Generator Output.md  Robot_Mathematics_Assessment.docx.md  Robotics & AI Coding Assessment- LINUX & ROS2 Fundamentals.md  SLAM_Assessment.docx.md  Simulation_Assessment.docx.md
docs/: 11_prompt.md  ARCHITECTURE.md  CONFIDENCE_SCORE_REPORT.md  INDEX.md  INTEGRATION_SUMMARY.md  SYSTEM_GUIDE.md  ros2_sandbox_grading.md
evaluations/: confidence.json  confidence_validation_report.json  question.json  solution.json
guardrails/: README.md  batch_diversity_guardrails.yaml  construct_benchmark.jsonl  guardrail_rules.yaml  guardrails.yaml  pedagogical_guardrails.yaml  quality_guardrails.yaml  rejection_patterns.yaml  ros2_correctness_guardrails.yaml
outputs/: README_OUTPUT_FORMAT.md  question.json  solution.json
prompts/: confidence_student.txt  coverage_verifier.txt  difficulty_critic.txt  llm_critic.txt  md_section_summariser.txt  md_summary.txt  originality_web.txt  planner_reflect.txt  quality_judge.txt  question_generator.txt  question_generator_detailed.txt  scope_critic.txt  skill_extractor.txt  skill_picker.txt  supervisor_judge.txt  syllabus_parser.txt
robo_assess/: __init__.py  batch_processor.py  cli.py  config.py  guardrails.py  learned_confidence.py  llm_client.py  (+9 more)
(+54 files in other folders)
