[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo_assess"
version = "1.0.0"
description = "Multi-agent generator for production-grade ROS2 coding assessments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Assessment Author", email = "assessments@example.com" }]
keywords = ["ros2", "robotics", "assessment", "multi-agent", "code-generation"]
dependencies = [
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
log = ["structlog>=24.1.0"]
llm = ["openai>=1.30.0", "anthropic>=0.34.0", "instructor>=1.3.0", "tenacity>=8.3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
robo-assess = "robo_assess.cli:main"

[tool.setuptools.packages.find]
include = ["robo_assess*"]
exclude = ["tests*", "examples*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
